--- a/web/css/bootstrap.css
+++ b/web/css/bootstrap.css
@@ -5983,6 +5983,10 @@ button.close {
   vertical-align: text-top !important;
 }
 
+.bg-white {
+  background-color: #FFFFFF;
+}
+
 .bg-faded {
   background-color: #f7f7f9;
 }
