--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,8 +1,16 @@
-.second-nav{
-    margin-top: 70px;
-}
 
 body {
     padding-top: 135px;
     background-color:  #F1F1F1;
+}
+
+.second-nav {
+    margin-top: 70px;
+}
+
+.carousel .carousel-inner img {
+    width: 100%;
+    height: 30em;
+    object-fit: cover;
+    overflow: hidden;
 }
