--- a/web/css/bootstrap.css
+++ b/web/css/bootstrap.css
@@ -5992,11 +5992,11 @@ button.close {
 }
 
 .bg-blue {
-  background-color: #025aa5 !important;
+  background-color: #325A75 !important;
 }
 
 a.bg-blue:focus, a.bg-blue:hover {
-  background-color: #02386d !important;
+  background-color: #2a4157 !important;
 }
 
 .bg-primary {
