--- a/web/css/bootstrap.css
+++ b/web/css/bootstrap.css
@@ -4044,7 +4044,7 @@ tbody.collapse.in {
 }
 
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-  color: rgba(0, 0, 0, 0.7);
+  text-shadow: 0 0 3px #b7b7b7, 0 0 5px #000000;
 }
 
 .navbar-light .navbar-nav .open > .nav-link, .navbar-light .navbar-nav .open > .nav-link:focus, .navbar-light .navbar-nav .open > .nav-link:hover,
