--- a/web/css/bootstrap.css
+++ b/web/css/bootstrap.css
@@ -6536,6 +6536,10 @@ a.bg-inverse:focus, a.bg-inverse:hover {
   color: #fff !important;
 }
 
+.text-black {
+  color: #000000 !important;
+}
+
 .text-muted {
   color: #818a91 !important;
 }
